# ccrepo_utility

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
ccrepo/: __init__.py  api.py  containers.py  converters.py  data.py  fetch.py  process.py  readers.py  test_script.py  utils.py  writers.py
ccrepo/writers/: __init__.py  gaussian.py  molpro.py  orca.py  psi4.py  writers.py
docs/: conf.py  index.rst  installation.rst  modules.rst  requirements.txt  tutorials.rst  tutorials.txt
docs/docs/: .buildinfo  ccrepo.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/docs/.doctrees/: ccrepo.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  tutorials.doctree
docs/docs/_sources/: ccrepo.rst.txt  index.rst.txt  tutorials.rst.txt
examples/: H_He_cc_pVDZ.txt  fetch_basis_example.py
tests/: test_fetch.py
tests/data/: sample_basis.txt
