[metadata]
name = ccrepo
version = 0.1.0
description = A utility for calling and using a basis set from ccrepo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stedonnelly/ccrepo_utility
author = Dr. Shaun Thomas Edward Donnelly
author_email = shaun.t.e.donnelly@gmail.com
license = MIT License (Non-Commercial)
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests>=2.32.3
    colorlog>=2.32.3
    tqdm>=4.66.4
    numpy>=1.26.4
python_requires = >=3.10

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    pytest
    black

